--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,15 +34,13 @@ jobs:
             echo "== Dependencies installed at $(date) =="
 
             echo "== Writing .env at $(date) =="
-            cat > .env <<EOL
-DISCORD_CLIENT_ID=${{ secrets.DISCORD_CLIENT_ID }}
-DISCORD_CLIENT_SECRET=${{ secrets.DISCORD_CLIENT_SECRET }}
-DISCORD_TOKEN=${{ secrets.DISCORD_TOKEN }}
-GUILD_ID=${{ secrets.GUILD_ID }}
-LOG_CHANNEL_ID=${{ secrets.LOG_CHANNEL_ID }}
-OAUTH_PORT=${{ secrets.OAUTH_PORT }}
-WELCOME_CHANNEL_ID=${{ secrets.WELCOME_CHANNEL_ID }}
-EOL
+            echo "DISCORD_CLIENT_ID=${{ secrets.DISCORD_CLIENT_ID }}" > .env
+            echo "DISCORD_CLIENT_SECRET=${{ secrets.DISCORD_CLIENT_SECRET }}" >> .env
+            echo "DISCORD_TOKEN=${{ secrets.DISCORD_TOKEN }}" >> .env
+            echo "GUILD_ID=${{ secrets.GUILD_ID }}" >> .env
+            echo "LOG_CHANNEL_ID=${{ secrets.LOG_CHANNEL_ID }}" >> .env
+            echo "OAUTH_PORT=${{ secrets.OAUTH_PORT }}" >> .env
+            echo "WELCOME_CHANNEL_ID=${{ secrets.WELCOME_CHANNEL_ID }}" >> .env
 
             echo "== Restarting bot via PM2 at $(date) =="
             pm2 restart CNSBot || pm2 start src/index.js --name CNSBot
