--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,9 @@ jobs:
             echo "WELCOME_CHANNEL_ID=${{ secrets.WELCOME_CHANNEL_ID }}" >> .env
 
             echo "== Restarting bot via PM2 at $(date) =="
-            pm2 restart CNSBot || pm2 start src/index.js --name CNSBot
+            pm2 stop CNSBot || true
+            pm2 delete CNSBot || true
+            pm2 start src/index.js --name CNSBot
             pm2 save
 
             echo "== Finished at $(date) ==" 
