Added rookie level

--- a/src/config/levelSettings.json
+++ b/src/config/levelSettings.json
@@ -4,6 +4,7 @@
     "xpPerMinuteVoice": 1,
     "levelUpRoles": {
       "1": "CNS Newcomer",
+      "2": "CNS Rookie",
       "3": "CNS Member",
       "5": "CNS Veteran",
       "7": "CNS Master",
@@ -14,8 +15,8 @@
     },
     "xpThresholds": {
       "1": 25,
-      "2": 75,
-      "3": 150,
+      "2": 150,
+      "3": 300,
       "4": 350,
       "5": 750,
       "6": 1150,
@@ -31,6 +32,7 @@
     },
     "roleAssignments": {
       "1": "1245023434686333049",
+      "2": "1397696673962004632",
       "3": "1245022253431914547",
       "5": "1395460298768384182",
       "7": "1395460661739520173",
@@ -40,6 +42,8 @@
       "15": "1395461073615851571"
     },
     "persistentRoles": {
+      "1": false,
+      "2": false,
       "3": true,
       "5": false,
       "7": false,
