--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "reboot:dev": "pm2 restart CNSBot-Dev",
     "logs": "pm2 logs CNSBot",
     "logs:dev": "pm2 logs CNSBot-Dev",
-    "test": "jest",
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
+    "test:watch": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --watch",
+    "test:coverage": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --coverage",
+    "test:ci": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --ci --coverage --watchAll=false",
     "dev": "cross-env NODE_ENV=development node src/index.js"
   },
   "keywords": [],
