--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ yarn-error.log*
 .env.prod
 
 # Database
-
+src/database/bot.db 
 
 # MacOS
 .DS_Store
@@ -67,3 +67,4 @@ coverage/
 config.test/ 
 
 # CNS Bot database
+src/database/bot.db 
