--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,7 @@ jobs:
             echo "LOG_CHANNEL_ID=${{ secrets.LOG_CHANNEL_ID }}" >> .env
             echo "OAUTH_PORT=${{ secrets.OAUTH_PORT }}" >> .env
             echo "WELCOME_CHANNEL_ID=${{ secrets.WELCOME_CHANNEL_ID }}" >> .env
+            echo "SKIP_GIVEAWAYS_MIGRATION=${{ secrets.SKIP_GIVEAWAYS_MIGRATION }}" >> .env
 
             echo "== Restarting bot via PM2 at $(date) =="
             pm2 stop CNSBot || true
