--- a/package.json
+++ b/package.json
@@ -20,19 +20,20 @@
   "description": "Custom bot for CNS Server",
   "type": "module",
   "dependencies": {
-    "@discord-player/extractor": "^4.5.0",
+    "@discord-player/extractor": "^7.1.0",
     "@discordjs/opus": "^0.9.0",
-    "@discordjs/voice": "^0.16.1",
+    "@discordjs/voice": "^0.19.0",
     "better-sqlite3": "^12.2.0",
     "bottleneck": "^2.19.5",
     "canvas": "^3.1.2",
     "cross-env": "^7.0.3",
-    "discord-player": "^6.7.1",
+    "discord-player": "^7.1.0",
     "discord.js": "^14.21.0",
     "dotenv": "^17.2.0",
     "express": "^4.21.2",
     "ffmpeg-static": "^5.2.0",
     "jest": "^30.0.4",
+    "lavalink-client": "^2.6.1",
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "pino": "^9.7.0",
